--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
-body {
+
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Handlee&family=Henny+Penny&display=swap');
+
+
+ body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
+  /*  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
+  /*  sans-serif;*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #ffefd5;
+  /*font-family: "Comic Neue", cursive;*/
+  /*font-weight: 400;*/
+  /*font-style: normal;*/
+     font-family: "Henny Penny", system-ui;
+     font-weight: 400;
+     font-style: normal;
+     /*position: absolute;*/
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.dark{
+  background: #0e0202;
+  color: #F2F1D8;
 }
